fixed word wrap for conversations.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,6 @@ html {
 body {
   background-color: #e9ebee;
   letter-spacing: 0.24px;
-  word-break: break-all;
 }
 
 .ReactModal__Body--open {
