--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -187,6 +187,7 @@
 
 .conversation-content-message {
   color: #4b4f56;
+  word-break: break-all;
 }
 
 
